--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,108 +1,103 @@
-
 $theme-colors: (
-    "primary" : #ef4f4f,
-    "secondary": #ee9595,
+  "primary": #ef4f4f,
+  "secondary": #ee9595,
 );
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 @import "~bootstrap/scss/bootstrap";
 
-
-body{
-    font-family: 'Roboto', sans-serif;
-    background-color: #f5f4f4;
-    margin-bottom: 64px;
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #f5f4f4;
+  margin-bottom: 64px;
 }
 
 html {
-    position: relative;
-    min-height: 100%;
+  position: relative;
+  min-height: 100%;
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 64px;
-    line-height: 60px;
-    .footer-link{
-        color: white;
-        font-size: 24px;
-        margin-right: 10px;
-    }
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 64px;
+  line-height: 60px;
+  .footer-link {
+    color: white;
+    font-size: 24px;
+    margin-right: 10px;
+  }
 }
 
-
-.carousel-item{
-    
-    .carousel-caption{
-        bottom:auto;
-        top: 50px;
-    }
+.carousel-item {
+  .carousel-caption {
+    bottom: auto;
+    top: 50px;
+  }
 }
-.content-editor-wrapper{
-    border: rgb(206, 212, 218) solid 1px;
-    border-radius: 5px;
-    .content-editor{
-        height: 500px;
-        padding: 5px;
-    }
+.content-editor-wrapper {
+  border: rgb(206, 212, 218) solid 1px;
+  border-radius: 5px;
+  .content-editor {
+    height: 500px;
+    padding: 5px;
+  }
 }
 
-.fileuploader{
-    cursor: pointer;
-    position: relative;
-    input{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        opacity: 0.0;
-        cursor: pointer;
-    }
-}
-
-.clear{
-    margin-bottom: 0.5rem;
-    opacity: 0;
-}
-
-.required::after{
-    content: "*";
-    color: red;
-}
-
-.post-wrapper {
-    margin: 30px 0;
-    .post-sharer {
-        font-size: 32px;
-        .fb{
-            color: #3b5998;
-        }
-        .tw{
-            color: #00acee;
-        }
-        .gp{
-            color: #db4a39;
-        }
-    }
-    .post-footer{
-        padding: 10px 20px;
-        border-top: black solid 1px;
-    }
-}
-
-.loader{ 
+.fileuploader {
+  cursor: pointer;
+  position: relative;
+  input {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1;
-    background: rgba(0,0,0,.2);
-    top: 0;
     left: 0;
-    text-align: center;
-    padding: 15%;
-    
+    top: 0;
+    opacity: 0;
+    cursor: pointer;
+  }
+}
+
+.clear {
+  margin-bottom: 0.5rem;
+  opacity: 0;
+}
+
+.required::after {
+  content: "*";
+  color: red;
+}
+
+.post-wrapper {
+  margin: 30px 0;
+  .post-sharer {
+    font-size: 32px;
+    .fb {
+      color: #3b5998;
+    }
+    .tw {
+      color: #00acee;
+    }
+    .gp {
+      color: #db4a39;
+    }
+  }
+  .post-footer {
+    padding: 10px 20px;
+    border-top: black solid 1px;
+  }
+}
+
+.loader {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  text-align: center;
+  padding: 15%;
 }
